# 2025-final-command-team-41-Backend

./: architecture.md  clean-db-start.sh  docker-prepare.sh  pyproject.toml  pytest.ini
src/: __init__.py
src/core/: container.py  database.py  di.py  domain.py  error_handlers.py  events.py  exceptions.py  factories.py  logging.py  settings.py  timezone_utils.py
src/entrypoints/mock/: main.py
src/entrypoints/rest/: main.py
src/entrypoints/runner/: main.py
src/modules/auth/: provider.py
src/modules/auth/application/: commands.py  queries.py  services.py
src/modules/auth/domain/: entities.py  events.py  exceptions.py  services.py
src/modules/auth/infrastructure/: event_handlers.py
src/modules/base/api/: mappers.py  schemas.py
src/modules/base/domain/: repositories.py
src/modules/bookings/: provider.py
src/modules/bookings/application/: commands.py  queries.py  services.py
src/modules/bookings/domain/: entities.py  events.py  exceptions.py  repositories.py  services.py
src/modules/bookings/infrastructure/: event_handlers.py
src/modules/coworkings/: provider.py
src/modules/coworkings/application/: commands.py  queries.py  services.py
src/modules/coworkings/domain/: entities.py  repositories.py
src/modules/notifications/: provider.py
src/modules/notifications/application/: commands.py  queries.py  services.py
src/modules/notifications/domain/: entities.py  (+5 more)
src/modules/options/: provider.py
src/modules/spots/: provider.py
src/modules/users/: provider.py
src/tests/e2e/: 01_create_user.tavern.yml  02_invalid_create_user.tavern.yml
(+73 files in other folders)
